--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,22 @@
     <link rel="icon" href="%PUBLIC_URL%/ashjithlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Jithin and Ashley's wedding website"
-    />
+    <meta name="description" content="Jithin and Ashley's wedding website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ashjithlogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Rye&display=swap" rel="stylesheet">
+    <link rel="preload" rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Rye&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -32,8 +36,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      Thank you for checking the code of this website, leave all this and
-      enjoy our wedding.
+      Thank you for checking the code of this website, rejoin our wedding.
     -->
   </body>
 </html>
